# Blacksmith

./: .gitignore  Best-pattern.txt  CMakeLists.txt  Constants.h  FileList.cmake  README.md  SaveHistory.cxx  SaveHistory.h  destination.h  main.cpp  main.cxx  makefile  result.cpp  result.h  tableau.cpp  tableau.cxx  tableau.h
.github/workflows/: cmake-multi-platform.yml
include/: CResult.h  CTableau.h  CTableauState.h  Constants.h  SaveHistory.h  result.h  tableau.h
src/: CInputArguments.cpp  CInputArguments.h  CResult.cpp  CTableau.cpp  CTableauState.cpp  SaveHistory.cpp  main.cpp  tableau.cpp
